fix(menu): menu items are not aligned in Microsoft Edge
Fixes #3987, closes #5487

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -89,13 +89,14 @@ md-menu-item {
     font-size: (2*$baseline-grid) - 1;
     text-transform: none;
     font-weight: 400;
+    text-align: left;
     text-align: start;
     height: 100%;
     padding-left: 2*$baseline-grid;
     padding-right: 2*$baseline-grid;
     display: inline-block;
     align-items: baseline;
-    align-content: left;
+    align-content: flex-start;
     width:100%;
     md-icon {
       margin: auto 2*$baseline-grid auto 0;
